# BonusWork

./: CMakeLists.txt  README.md  main.cpp  main.h
1.Introduction to data structures/: blank
10.Print elements of a linked list in forward and reverse order using recursion/: Node10.h  main.cpp
11.Reverse a linked list using recursion/: Node11.h  main.cpp
13.Doubly Linked List - Implementation/: Node13.h  main.cpp
15.Array implementation of stacks/: Node15.h  main.cpp
16.Linked List implementation of stacks/: Node16.h  main.cpp
17.Reverse a string or linked list using stack/: Node17.h  main.cpp
18.Check for balanced parentheses using stack/: Node18.h  main.cpp
20. Evaluation of Prefix and Postfix expressions using stack/: Node20.h  main.cpp
21.Infix to Postfix using stack/: Node21.h  main.cpp
23.Array implementation of Queue/: Node23.h  main.cpp
24.Linked List implementation of Queue/: main.cpp
36.Delete a node from Binary Search Tree/: Node36.h  main.cpp
37.Inorder Successor in a binary search tree/: Node37.h  main.cpp
4.Arrays vs Linked Lists/: blank
42.Adjacency List/: blank
5. Linked List Implemantation/: Node5.h  main.cpp
6.Inserting a node at beginning/: Node6.h  main3.cpp
7.Insert a node at nth position/: Node7.h  main4.cpp
8.Delete a node at nth position/: Node8.h  main5.cpp
9.Reverse a linked list/: Node9.h  main6.cpp
